<resources>
    <string name="app_name">Tallie</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_description">image</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="my_orders">My orders</string>
    <string name="my_collection">My collection</string>
    <string name="search">Search</string>
    <string name="best_selling">Best selling books</string>
    <string name="featured_books">Featured books</string>
    <string name="cart">Cart</string>
    <string name="remember_me">Remember me</string>
    <string name="by">by</string>
    <string name="log_out">Log out</string>
    <string name="your_cart">Your Cart</string>
    <string name="setting">Setting</string>
    <string name="book_detail">Book Detail</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="more_information_about_book">More Information About Book</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="back">Back</string>
    <string name="most_viewed_books">Most viewed books</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="seller">Seller</string>
    <string name="all_categories">All categories</string>
    <string name="reviews">Reviews</string>
    <string name="add_to_wish_list">Add to wish list</string>
    <string name="add_new_review">Add new review</string>
    <string name="enter_overview">Enter review overview</string>
    <string name="enter_review_content">Enter review content</string>
    <string name="submit">Submit</string>
    <string name="is_spoiled">is spoiled</string>
    <string name="new_review">New review</string>
    <string name="star">Star</string>
    <string name="edit_review">Edit review</string>
    <string name="delete_review">Delete review</string>
    <string name="payment">Payment</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="card_number">Card number</string>
    <string name="enter_your_card_number">Enter your card number</string>
    <string name="cvc">CVC</string>
    <string name="enter_your_cvc">Enter your CVC</string>
    <string name="enter_your_end_date">Enter your end date</string>
    <string name="end_date">End date</string>
    <string name="enter_your_start_date">Enter your start date</string>
    <string name="start_date">Start date</string>
    <string name="update_payment">Update payment</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="update_user">User update</string>
    <string name="address">Address</string>
    <string name="bio">Bio</string>
</resources>